--- a/pages/donate.html
+++ b/pages/donate.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <title>Donate | Ordo Draconis</title>
   <link rel="stylesheet" href="../css/style.css">
-<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="scroll-right logo-pulse">
+
 <div class="layout">
 
   <!-- LEVÁ STRANA -->
@@ -21,20 +22,21 @@
 
       <div class="top-actions">
         <div class="auth">
-  <a href="/auth/register.html" class="btn">Registrace</a>
-  <a href="/auth/login.html" class="btn">Přihlášení</a>
-</div>
-            <div class="lang">
-  <a href="donate.html" class="active">CS</a> |
-  <a href="donate-en.html">EN</a>
+          <a href="/auth/register.html" class="btn">Registrace</a>
+          <a href="/auth/login.html" class="btn">Přihlášení</a>
+        </div>
 
-  <div class="server-status online">
-  <span class="dot"></span>
-  Online
-  <span class="divider">·</span>
-  <span class="players"></span>
-</div>
-</div>
+        <div class="lang">
+          <a href="donate.html" class="active">CS</a> |
+          <a href="donate-en.html">EN</a>
+
+          <div class="server-status online">
+            <span class="dot"></span>
+            Online
+            <span class="divider">·</span>
+            <span class="players"></span>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -48,20 +50,80 @@
 
     <div class="content-box">
       <h3>Donate</h3>
-<p>Tato část webu je věnována podpoře serveru Ordo Draconis.</p>
-<p>
-V současné chvíli se celkový donate systém teprve připravuje.<br>
-Nebude se jednat o P2W systém. Celý systém je stále ve výstavbě – chceme server, kde donate nebude samotnou hru nijak ovlivňovat ani hráče znevýhodňovat či zvýhodňovat.<br>
-Zatím uvažujeme pouze o možném navýšení rate pro VIP hráče. Nicméně jsme se zatím nerozhodli a nemáme jasno v tom, zda bude možné například zakoupit skiny na mounty, nebo rovnou celé mounty. To, že uvidíte Lineage II ze sedla, hru nijak neovlivní.<br>
-Donate je tedy zcela na vás. Budeme rádi za jakýkoliv příspěvek na chod serveru.<br>
-S pozdravem<br>
-Team Ordo
-</p>
+
+      <p>
+        Tato část webu je věnována podpoře serveru Ordo Draconis. Donate je dobrovolný příspěvek na provoz a údržbu serveru
+        (hardware, hosting, vývoj, bezpečnost, opravy). <strong>Nejde o P2W</strong> – nechceme systém, který by někoho ve hře
+        zvýhodňoval silou.
+      </p>
+
+      <h4 class="subhead">Premium (podpora serveru)</h4>
+      <p>
+        Za příspěvek je možné získat <strong>Premium</strong> ve dvou variantách:
+      </p>
+      <ul class="rules-list">
+        <li><strong>Premium GAME</strong> – vztahuje se na jeden herní účet (a tedy i na všechny postavy na tomto účtu).</li>
+        <li><strong>Premium WEB</strong> – vztahuje se na celý webový účet (a tedy na všechny herní účty pod ním i všechny jejich postavy).</li>
+      </ul>
+
+      <h4 class="subhead">Jak funguje prodlužování</h4>
+      <ul class="rules-list">
+        <li><strong>GAME Premium + nákup znovu</strong> = čas se prodlouží (např. +30 dní).</li>
+        <li><strong>WEB Premium + nákup znovu</strong> = čas se sčítá (např. +30 dní).</li>
+        <li>
+          <strong>Přechod z GAME → WEB</strong>: pokud máš aktivní GAME Premium a aktivuješ WEB Premium,
+          <strong>WEB Premium přepíše GAME</strong> a začne běžet nová doba podle WEB Premium.
+        </li>
+      </ul>
+      <p class="rules-note">
+        Výhody lze získat i bez placení
+      </p>
+
+      <h4 class="subhead">VIP 24h (bez placení)</h4>
+      <p>
+        VIP není nutné kupovat za peníze. Je dostupné i „zadarmo“ přes hlasování:
+      </p>
+      <ul class="rules-list">
+        <li><strong>VIP 24h</strong> = <strong>4 Vote Coiny</strong></li>
+        <li>nebo <strong>1 Dragon Coin</strong> (hodnota = 4 Vote Coiny)</li>
+        <li>Vote Coiny lze směňovat za Dragon Coiny</li>
+      </ul>
+
+      <h4 class="subhead">Výhody VIP / Premium</h4>
+      <ul class="rules-list">
+        <li><strong>.offline</strong> příkaz (offline - prodej / výroba / buff .sellbuffs)</li>
+        <li>další QoL benefity budou doplněny postupně, ale vždy s důrazem na <strong>non-P2W</strong></li>
+      </ul>
+
+      <h4 class="subhead">Do budoucna</h4>
+      <p>
+        Připravujeme možnost pořízení <strong>kosmetických</strong> věcí, které nemění sílu postavy (např. mounti, skiny apod.).
+        Cílem je lepší zážitek, ne výhoda v PvP.
+      </p>
+
+      <h4 class="subhead">Důležité (férově a na rovinu)</h4>
+      <ul class="rules-list">
+        <li><strong>Donate = příspěvek</strong> na chod projektu, ne „nákup zboží“ a nevzniká tím nárok na reklamace jako v e-shopu.</li>
+        <li><strong>Neřešíme a negarantujeme</strong> soukromé obchody mezi hráči (prodej měny/itemů mimo systém je zakázán).</li>
+        <li>Server je komunitní projekt – děláme maximum pro stabilitu, ale může dojít k údržbě, výpadku nebo opravám.</li>
+      </ul>
+
       <p>_________________</p>
+      <p>S pozdravem<br>Team Ordo Draconis</p>
+    </div>
+
+    <!-- odkazy dole -->
+    <div class="page-footer">
+      <a href="https://discord.gg/TVUJ_INVITE" target="_blank" rel="noopener">Discord</a>
+      <span>·</span>
+      <a href="rules.html">Pravidla</a>
+      <span>·</span>
+      <a href="gdpr.html">GDPR</a>
     </div>
 
   </aside>
 </div>
+
 <script>
 async function updateServerStatus() {
   try {
