--- a/pages/server.html
+++ b/pages/server.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <title>Server | Ordo Draconis</title>
   <link rel="stylesheet" href="../css/style.css">
-<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="scroll-right logo-pulse">
 <div class="layout">
 
   <!-- LEVÁ STRANA -->
@@ -21,20 +21,21 @@
 
       <div class="top-actions">
         <div class="auth">
-  <a href="/auth/register.html" class="btn">Registrace</a>
-  <a href="/auth/login.html" class="btn">Přihlášení</a>
-</div>
-          <div class="lang">
-  <a href="server.html" class="active">CS</a> |
-  <a href="server-en.html">EN</a>
+          <a href="/auth/register.html" class="btn">Registrace</a>
+          <a href="/auth/login.html" class="btn">Přihlášení</a>
+        </div>
 
-  <div class="server-status online">
-  <span class="dot"></span>
-  Online
-  <span class="divider">·</span>
-  <span class="players"></span>
-</div>
-</div>
+        <div class="lang">
+          <a href="server.html" class="active">CS</a> |
+          <a href="server-en.html">EN</a>
+
+          <div class="server-status online">
+            <span class="dot"></span>
+            Online
+            <span class="divider">·</span>
+            <span class="players"></span>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -48,108 +49,117 @@
 
     <div class="content-box">
       <button id="musicBtn" class="music-toggle">
-  <span class="icon">▶</span> Otevřít kroniku
-</button>
+        <span class="icon">▶</span> Otevřít kroniku
+      </button>
 
-  <div class="credits-window">
-    <div class="credits-content">
+      <div class="credits-window">
+        <div class="credits-content">
 
-    <h3>Úvodní řeč klanu Ordo Draconis</h3>
+          <h3>Úvodní řeč klanu Ordo Draconis</h3>
 
-<p>
-Byly doby, kdy pro nás svět MMORPG nebyl jen hrou.
-Byl to druhý domov.
-</p>
-<p>
-Někdy kolem let 2004–2005 jsme poznali sílu a krásu
- online světa, který dokázal spojit lidi z různých koutů
-  republiky – i světa – v jeden celek. Právě tehdy vznikala
-   přátelství, rivality, aliance… a klany, které měly duši.
-    Jedním z nich byl <strong>Ordo Draconis.</strong>
-</p>
+          <p>Byly doby, kdy pro nás svět MMORPG nebyl jen hrou. Byl to druhý domov.</p>
 
-<p>
-Zažili jsme éru <strong>C4, C5, C6.</strong> Dlouhé noci, nekonečné farmení,
- první raid bossy, napětí při PvP, radost z vítězství i hořkost
-  porážek. Nehráli jsme sami – stáli při nás spojenci v alianci,
-   lidé, se kterými jsme sdíleli raid bossy, války i obyčejné
-    chvíle ve městech.
-</p>
-<p> Začínali jsme na serveru IceOnline.
-A pak přišel moment, na který se nezapomíná. </p>
-<p> Neohlášený wipe, rozhodnutí jednoho admina, 
-  které během okamžiku smetlo týdny a měsíce úsilí. Na celé
-   komunitě zanechal šrám, který si mnozí z nás nesou dodnes. 
-   Ne kvůli ztraceným postavám – ale kvůli pocitu, že něco
-    výjimečného bylo bez varování zničeno. </p>
-<p>Tento server vznikl jako pocta těm časům.<br>
-Pocta všem, kteří byli součástí Ordo Draconis.<br>
-Pocta těm, kteří s námi stáli v alianci.<br>
-Pocta těm, kteří s námi chodili na raid bossy, bojovali po našem boku anebo proti nám.</p>
+          <p>
+            Někdy kolem let 2004–2005 jsme poznali sílu a krásu online světa, který dokázal spojit lidi
+            z různých koutů republiky – i světa – v jeden celek. Právě tehdy vznikala přátelství, rivality,
+            aliance… a klany, které měly duši. Jedním z nich byl <strong>Ordo Draconis.</strong>
+          </p>
 
+          <p>
+            Zažili jsme éru <strong>C4, C5, C6.</strong> Dlouhé noci, nekonečné farmení, první raid bossy,
+            napětí při PvP, radost z vítězství i hořkost porážek. Nehráli jsme sami – stáli při nás spojenci
+            v alianci, lidé, se kterými jsme sdíleli raid bossy, války i obyčejné chvíle ve městech.
+          </p>
 
-<p>Nejde o návrat v čase.<br>
-Jde o možnost zavzpomínat.<br>
-</p>
-<p>Server je nastaven tak, aby byl herně příjemný, respektoval
-   čas hráčů a dovolil znovu prožít atmosféru starých dobrých
-    let – bez zbytečného tlaku, bez frustrace, s důrazem na
-     komunitu.</p>
-<p>Pokud jsi tu hrál…<br>
-Pokud si pamatuješ ta jména, ty chvíle, ty noci…<br>
-Pak je tenhle svět i pro tebe.</p>
-<p>A níže už neběží jen obyčejné titulky.<br>
-<strong>Běží vzpomínky.</strong></p>
+          <p>Začínali jsme na serveru IceOnline. A pak přišel moment, na který se nezapomíná.</p>
 
-    <p>Ashe	—	shillien elder</p>
-    <p>Atham — paladin</p>
-    <p>Azaghal — warsmith</p>
-    <p>Craftie — warsmith</p>
-    <p>Ecallir — gladiator</p>
-    <p>Feisar — bladedancer</p>
-    <p>Flaminius - spellhowler</p>
-    <p>Georgus — warlord</p>
-    <p>Grunt — overlord</p>
-    <p>Neoras — shillien elder</p>
-    <p>Paulie — sword singer</p>
-    <p>Shangalar — necromancer</p>
-    <p>Ultimo — warcryer</p>
-    <p>Vlad — spoiler</p>
-    <p>A</p>
-    <p>Organizátor</p>
-    <p>Velitel</p>
-    <p>Psycholog</p>
-    <p>Vůdce</p>
-    <p><strong>Shardalhar</strong></p>
-    <p>—</p>
-    <p>A</p>
-    <p>Všem, kteří byli součástí.</p>
-    <p></p>
-    <p>Cheeroke - kamarád z města</p>
-    <p>Erutan</p>
-    <p>Johan - admin Iceonline</p>
-    <p>Lauriel</p>
-    <p>xxlamaxx - otravný hráč, později GM</p>
-    <p></p>
-    <p>A mnoho dalších na které si nemůžu vzpomenout.</p>
-    <p>Tohle je věnování pro všechny spoluhráce i soupeře.</p>
-    <p>Pokud tu jste, užijte si hru.</p>
-    <p>Nesmí být nezmíněn korejský random.</p>
-    <p>Buglá geodata</p>
+          <p>
+            Neohlášený wipe, rozhodnutí jednoho admina, které během okamžiku smetlo týdny a měsíce úsilí.
+            Na celé komunitě zanechal šrám, který si mnozí z nás nesou dodnes. Ne kvůli ztraceným postavám –
+            ale kvůli pocitu, že něco výjimečného bylo bez varování zničeno.
+          </p>
+
+          <p>
+            Tento server vznikl jako pocta těm časům.<br>
+            Pocta všem, kteří byli součástí Ordo Draconis.<br>
+            Pocta těm, kteří s námi stáli v alianci.<br>
+            Pocta těm, kteří s námi chodili na raid bossy, bojovali po našem boku anebo proti nám.
+          </p>
+
+          <p>Nejde o návrat v čase.<br>Jde o možnost zavzpomínat.<br></p>
+
+          <p>
+            Server je nastaven tak, aby byl herně příjemný, respektoval čas hráčů a dovolil znovu prožít
+            atmosféru starých dobrých let – bez zbytečného tlaku, bez frustrace, s důrazem na komunitu.
+          </p>
+
+          <p>Pokud jsi tu hrál…<br>Pokud si pamatuješ ta jména, ty chvíle, ty noci…<br>Pak je tenhle svět i pro tebe.</p>
+
+          <p>A níže už neběží jen obyčejné titulky.<br><strong>Běží vzpomínky.</strong></p>
+
+          <p>Ashe — shillien elder</p>
+          <p>Atham — paladin</p>
+          <p>Azaghal — warsmith</p>
+          <p>Craftie — warsmith</p>
+          <p>Ecallir — gladiator</p>
+          <p>Feisar — bladedancer</p>
+          <p>Flaminius - spellhowler</p>
+          <p>Georgus — warlord</p>
+          <p>Grunt — overlord</p>
+          <p>Neoras — shillien elder</p>
+          <p>Paulie — sword singer</p>
+          <p>Shangalar — necromancer</p>
+          <p>Ultimo — warcryer</p>
+          <p>Vlad — spoiler</p>
+          <p>A</p>
+          <p>Organizátor</p>
+          <p>Velitel</p>
+          <p>Psycholog</p>
+          <p>Vůdce</p>
+          <p><strong>Shardalhar</strong></p>
+          <p>—</p>
+          <p>A</p>
+          <p>Všem, kteří byli součástí.</p>
+          <p></p>
+          <p>Cheeroke - kamarád z města</p>
+          <p>Erutan</p>
+          <p>Johan - admin Iceonline</p>
+          <p>Lauriel</p>
+          <p>xxlamaxx - otravný hráč, později GM</p>
+          <p></p>
+          <p>A mnoho dalších na které si nemůžu vzpomenout.</p>
+          <p>Tohle je věnování pro všechny spoluhráce i soupeře.</p>
+          <p>Pokud tu jste, užijte si hru.</p>
+          <p>Nesmí být nezmíněn korejský random.</p>
+          <p>Buglá geodata</p>
+
+        </div>
+      </div>
+
+      <div class="credits-source">
+        Zdroj:
+        <a href="https://www.youtube.com/watch?v=umwVbUjsj94&list=RDumwVbUjsj94&index=1" target="_blank" rel="noopener">
+          A Stranger in a Familiar Land – YouTube
+        </a>
+      </div>
     </div>
+
+    <!-- ✅ NOVĚ: odkazy dole -->
+    <div class="page-footer">
+      <a href="https://discord.gg/TVUJ_INVITE" target="_blank" rel="noopener">Discord</a>
+      <span>·</span>
+      <a href="rules.html">Pravidla</a>
+      <span>·</span>
+      <a href="gdpr.html">GDPR</a>
     </div>
-    </div>
-<div class="credits-source">
-  Zdroj: 
-  <a href="https://www.youtube.com/watch?v=umwVbUjsj94&list=RDumwVbUjsj94&index=1" target="_blank" rel="noopener">
-    A Stranger in a Familiar Land – YouTube
-  </a>
-</div>
+
   </aside>
 </div>
+
 <audio id="bgMusic">
   <source src="../audio/ordo-theme.mp3" type="audio/mpeg">
 </audio>
+
 <script>
 const music = document.getElementById("bgMusic");
 const btn = document.getElementById("musicBtn");
@@ -170,6 +180,7 @@ btn.addEventListener("click", () => {
   playing = !playing;
 });
 </script>
+
 <script>
 async function updateServerStatus() {
   try {
